# deep-research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  SKILL.md  docker-compose.yml  plan.md  pyproject.toml
deep_research/: __init__.py  __main__.py  config.py  credits.py  router.py  server.py  tavily_client.py
tests/: test_credits.py  test_router.py  test_tavily_client.py
