[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research"
version = "0.1.0"
description = "Tavily multi-key MCP gateway — drop-in replacement with 5x free-tier credits"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
